# marketplace

./: Cargo.toml  README.md  index.html
data/: amazon_response.json  amazon_response_2.json  amazon_response_3.json  scrape.html
db/: db.bak.json  db.json  keywords.back.json  keywords.json  keywords.old.json  scraper_cfg.json  users.json
examples/: add_to_db.rs  desktop.rs  fetch_amazon.rs  har.rs  liveview.rs  parse_scraper.rs  parse_single.rs  read_response.rs  scrape.rs  scrape_and_save.rs  serde_asins.rs  single.rs  transform.py  webdriver.rs
listing_data/: home_gym_shelf.csv  resistance_band_rack.csv  standing_desk.csv
listing_data/floating_wall_shelves/: floating_wall_shelves.csv  floating_wall_shelves_numerical.csv  floating_wall_shelves_processed.csv
listing_data/standing_desk/: standing_desk_numerical.csv
py/: config.csv  main2.py  plots.py  seleniumscraper.py
responses/: invocation.json  product.json
src/: actions.rs  app.rs  db.rs  helium10.rs  hooks.rs  icons.rs  lib.rs  logging.rs
src/api/: amazon.rs  cfg.rs  helium10.rs
src/components/: add_new.rs  dashboard.rs  greeting.rs  jupyter.rs  login.rs  mod.rs  navbar.rs  plots.rs  results.rs  review.rs  search.rs
src/plots/: mod.rs  salesscatter.rs
src/scraper/: page.yml
src/state/: README.md  flattened.rs  global.rs  mod.rs  search.rs
