[package]
name = "amazon_isr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
cookie_store = "0.15.0"
har = "0.7.0"
plotly = { version = "0.6.0", features = ["kaleido"] }
polars = "0.16.0"
reqwest = { version = "0.11.4", features = ["cookies", "json"] }
reqwest_cookie_store = "0.2.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.12.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
