[package]
name = "amazon_isr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoms = { path = "./../../ecosystem-dioxus/atomstwo" }
anyhow = "1.0.44"
cookie_store = "0.15.0"
plotly = { git = "https://github.com/jkelleyrtp/plotly.git", branch = "jk/ergo-fixes" }
reqwest = { version = "0.11.4", features = ["cookies", "json"] }
reqwest_cookie_store = "0.2.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }
dioxus = { path = "../../dioxus", features = ["ssr", "desktop", "router"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
csv = "1.1.6"
simple_logger = "1.13.0"
log = "0.4.14"
scraper = "0.12.0"
rand = "0.8.4"
fern = { version = "0.6.0", features = ["colored"] }
chrono = "0.4.19"
thiserror = "1.0.30"

# axum = { version = "0.2.8", features = ["ws", "headers"] }
# har = "0.7.0"
# plotly = { version = "0.6.0" }
# polars = { version = "0.16.0", features = ["lazy"] }
# tantivy = "0.16.1"
