[package]
name = "amazon_isr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoms = { path = "./../../ecosystem-dioxus/atomstwo" }
anyhow = "1.0.44"

plotly = { git = "https://github.com/jkelleyrtp/plotly.git", branch = "jk/ergo-fixes" }
reqwest = { version = "0.11.4", features = ["cookies", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["full"] }
dioxus = { path = "../../dioxus", features = ["ssr", "desktop", "router"] }
log = "0.4.14"
scraper = "0.12.0"
rand = "0.8.4"
fern = { version = "0.6.0", features = ["colored"] }
chrono = "0.4.19"

thiserror = "1.0.30"
uuid = { version = "1.0.0-alpha.1", features = [
    "v4",
    "serde",
    "fast-rng", # Use a faster (but still sufficiently random) RNG
] }
im-rc = "15.0.0"
url = { version = "2.2.2", features = ["serde"] }
